Fix button issue on ios15

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -100,7 +100,7 @@ button {
     background: transparent;
 
     border-radius: 25px;
-    border: solid 1px;
+    border: solid 1px black;
     box-shadow: 3px 3px black;
 
     cursor: pointer;
